# Qt5_practice

./: .gitignore  App.cpp  App.h  BorderLayout.h  CMakeLists.txt  Funcs.cpp  Funcs.h  KApplication.h  KComboBox.h  KGl.cpp  KGl.h  KLabel.h  KPushButton.h  KRun.h  KSetting.h  KSpectrogram.h  KWidget.h  NOTICE  README.md  header.h  main.cpp  main_button.cpp  main_combobox.cpp  main_frame.cpp  main_graphic.cpp  main_label.cpp  main_module.cpp  main_spec.cpp  main_switch_2.cpp  main_web.cpp  simple_file_IO_GUI.sln  style.h  switch.cpp  switch.h  switch_2.cpp  switch_2.h  window.h
doc/: doc.txt
include/QtWebEngineCore/: qtwebenginecoreversion.h
include/QtWebEngineCore/5.12.3/QtWebEngineCore/private/: qtwebenginecore-config_p.h
include/QtWebEngineWidgets/: qtwebenginewidgetsversion.h
lib/: libQt5Widgets.prl
simple_file_IO_GUI/: main.cpp  process.cpp  process.h  simple_file_IO_GUI.cpp  simple_file_IO_GUI.h  simple_file_IO_GUI.qrc  simple_file_IO_GUI.ui  simple_file_IO_GUI.vcxproj  simple_file_IO_GUI.vcxproj.filters
simple_file_IO_GUI/GeneratedFiles/: qrc_simple_file_IO_GUI.cpp  ui_simple_file_IO_GUI.h
